--- a/src/App/style.css
+++ b/src/App/style.css
@@ -16,5 +16,8 @@ body {
 
 .game {
   width: 66.66vw;
-  background: black;
+  background: #003366;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
