--- a/src/Game/game.css
+++ b/src/Game/game.css
@@ -8,7 +8,7 @@
 }
 
 .grid-plot {
-  background: red;
+  background: gray;
   border: 3px solid #003366;
   width: 100%;
   height: 100%;
@@ -19,7 +19,6 @@
   height: 116.5px;
   left: 3.2px;
   top: 3.2px;
-  background: orange;
   position: absolute;
   transition: all .75s;
 }
