--- a/src/Game/game.css
+++ b/src/Game/game.css
@@ -22,3 +22,13 @@
   position: absolute;
   transition: all .75s;
 }
+
+#Replay {
+  position: absolute;
+  z-index: 10;
+  background: red;
+  width: 100%;
+  height: 40%;
+  top: 30%;
+  text-align: center;
+}
